login and signup aligned with firebase. empty dashboard page. settings page without button that will go on dashboard